--- a/lightningGridLotteryFront/src/app/history/history.component.html
+++ b/lightningGridLotteryFront/src/app/history/history.component.html
@@ -4,7 +4,6 @@
       <li>Below is history of all games that sucesfully completed on this platform</li>
       <li>You can claim your winnings by pressing claim button</li>
       <li>You <b>claim</b> your winnings by providing lightning payment request and hash of your ticket</li>
-      <li> <button mat-raised-button color="primary" routerLink="" routerLinkActive="active" >Game</button></li>
     </ul>
   
 </div>
@@ -16,27 +15,22 @@
           The actual rendered columns are set as a property on the row definition" -->
   
     <!-- Position Column -->
-    <ng-container matColumnDef="position">
+    <ng-container matColumnDef="id">
       <th mat-header-cell *matHeaderCellDef> No. </th>
-      <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      <td mat-cell *matCellDef="let element"> {{element.round.roundID}} </td>
     </ng-container>
   
     <!-- Name Column -->
-    <ng-container matColumnDef="name">
+    <ng-container matColumnDef="winner">
       <th mat-header-cell *matHeaderCellDef> Winner </th>
-      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-    </ng-container>
-  
-    <!-- Weight Column -->
-    <ng-container matColumnDef="weight">
-      <th mat-header-cell *matHeaderCellDef> Prize (satoshi) </th>
-      <td mat-cell *matCellDef="let element">⚡{{element.weight}}⚡</td>
+      <td mat-cell *matCellDef="let element"> {{element.round.winner}} </td>
     </ng-container>
 
+    
     <!-- Claim Column -->
     <ng-container matColumnDef="claim">
       <th mat-header-cell *matHeaderCellDef> Claim </th>
-      <td mat-cell *matCellDef="let element"><button mat-raised-button>Claim</button> </td>
+      <td mat-cell *matCellDef="let element"><button color="accent" (click)="openDialog(element)" mat-raised-button>Claim</button> </td>
     </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
