feat(historyComponent, claimWinningDialog)

--- a/lightningGridLotteryFront/src/app/app.component.html
+++ b/lightningGridLotteryFront/src/app/app.component.html
@@ -8,8 +8,12 @@
   <hr>
   This game was made with 💙 by <a href="https://grmkris.com/">grmkris</a>
   <br>
+  <a mat-raised-button color="purple"  routerLink="history" routerLinkActive="active">History 📜</a>
+  <a mat-raised-button color="primary"  routerLink="" routerLinkActive="active">Game 🛴</a>
   <a mat-raised-button color="accent" href="https://btcpay.grmkris.com/ ">support me ☕</a>
   <a mat-raised-button color="accent" href="https://github.com/">code and intructions 👨‍💻</a>
+
+  
 
 
 </footer>
