--- a/lightningGridLotteryFront/src/app/game/game.component.html
+++ b/lightningGridLotteryFront/src/app/game/game.component.html
@@ -5,8 +5,7 @@
       <li>You can buy any tile you think that satoshi is hidding behind.</li>
       <li>When all tiles are bought satoshi is revealed and game restarts.</li>
       <li>Winner can claim their winning 🏆 after round ends.</li>
-      <li>This game is <i>provably fair</i> 📜 and uses <i>bitcoin lightning</i> for instant deposits / withdrawals</li>
-      <li>Check <button mat-raised-button routerLink="history" routerLinkActive="active" >history</button> and claim winnings </li>
+      <li>This game uses <i>bitcoin lightning</i> for instant deposits / withdrawals</li>
     </ul>
     
   </div>
