--- a/lightningGridLotteryFront/src/app/ticket-dialog/ticket-dialog.component.html
+++ b/lightningGridLotteryFront/src/app/ticket-dialog/ticket-dialog.component.html
@@ -1,19 +1,8 @@
 <div class="example-container">
-    <mat-form-field appearance="outline">
-        <mat-label>Name</mat-label>
-        <input matInput [(ngModel)]="ticketRequest.customerName" placeholder="Name">
-        <mat-icon matSuffix>person</mat-icon>
-    </mat-form-field>
 
     <mat-form-field appearance="outline">
-        <mat-label>Email</mat-label>
-        <input matInput placeholder="Email" [(ngModel)]="ticketRequest.customerEmail">
-        <mat-icon matSuffix>email</mat-icon>
-    </mat-form-field>
-
-    <mat-form-field appearance="outline">
-        <mat-label>Comment</mat-label>
-        <input matInput placeholder="Comment" [(ngModel)]="ticketRequest.description">
+        <mat-label>Super secure keyword</mat-label>
+        <input matInput placeholder="Super secure keyword" [(ngModel)]="ticketRequest.secret">
         <mat-icon matSuffix>comment</mat-icon>
 
     </mat-form-field>
